--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -14,11 +14,14 @@
     "@radix-ui/react-slider": "^1.2.4",
     "@radix-ui/react-slot": "^1.2.0",
     "@tailwindcss/vite": "^4.1.4",
+    "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^16.5.0",
     "lucide-react": "^0.488.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
     "react-range-slider-input": "^3.2.1",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.4",
